# parallel-computing-labs

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  evaluator.cpp  evaluator.h  lcg.cpp  lcg.h  lcg_test.cpp
lab2/: CMakeLists.txt  main.cpp  matrix.cpp  matrix.h  vector.cpp  vector.h
lab3/: CMakeLists.txt  linear_system_tools.cpp  linear_system_tools.h  main.cpp
lab4/: CMakeLists.txt  main.cpp  ode.cpp  ode.h
lab5/: CMakeLists.txt  main.cpp  queue.cpp  queue.h  stack.cpp  stack.h  thread_safe_object.cpp  thread_safe_object.h  timer.cpp  timer.h  vector.cpp  vector.h
lab6/: CMakeLists.txt  main.cpp  word_counter.cpp  word_counter.h  word_counter.ui  worker.cpp  worker.h
